# manugen-ai

./: .env.TEMPLATE  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.with-pg.yml  docker-compose.yml  pyproject.toml
.github/workflows/: run-precommit-checks.yml  run-tests.yml
backend/: Dockerfile  README.md  pyproject.toml  start_adk_web.sh  start_api_server.sh
backend/src/: __init__.py  adk_api.py  main.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
frontend/src/: App.vue  main.ts  styles.css
frontend/src/api/: adk.ts  agents.ts  endpoints.ts  fake.ts  index.ts
frontend/src/components/: AppAgent.vue  AppAgents.vue  AppArtifact.vue  AppArtifacts.vue  AppBrain.vue  AppButton.vue  AppEditor.vue  AppPreview.vue  AppUpload.vue  AppUploadArtifact.vue  agents.ts
frontend/src/pages/: PageEditor.vue  PageHome.vue  custom-paragraph.ts  example.txt  portal.ts
frontend/src/router/: index.ts
frontend/src/util/: composables.ts  download.ts  events.ts  misc.ts  upload.ts
model_cache/: README.md
services/caddy/: Caddyfile
