[project]
name = "manugen-ai-backend"
version = "0.1.0"
description = "A backend for the Manugen AI project, providing APIs for AI-driven manuscript generation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "fastapi>=0.104",
  "manugen-ai",
  "uvicorn[standard]>=0.24",
]

[tool.uv.sources]
# manugen-ai = { path = "/opt/manugen-ai" }
manugen-ai = { path = "../packages/manugen-ai" }
